@@ -70,14 +70,31 @@
             <scroll>false</scroll>
             <label>$INFO[ListItem.Label]</label>
           </control>
-          <control type="label" description="Label2">
+          <control type="label">
+           <posx>160</posx>
+           <posy>58</posy>
+           <width>500</width>
+           <height>30</height>
+           <font>font12</font>
+           <textcolor>ListDetails</textcolor>
+           <selectedcolor>ListDetails</selectedcolor>
+           <align>left</align>
+           <aligny>center</aligny>
+           <label>$INFO[ListItem.Title]</label>
+           <visible>IsEmpty(Listitem.Icon)</visible>
+          </control>
+          <control type="label">
             <posx>160</posx>
             <posy>58</posy>
-            <height>30</height>
             <width>500</width>
-            <scroll>false</scroll>
+            <height>30</height>
+            <font>font12</font>
             <textcolor>ListDetails</textcolor>
+            <selectedcolor>ListDetails</selectedcolor>
+            <align>left</align>
+            <aligny>center</aligny>
             <label>$INFO[ListItem.Title]</label>
+            <visible>!IsEmpty(Listitem.Icon)</visible>
           </control>
           <control type="progress">
 	    <posx>160</posx>
@@ -128,13 +145,31 @@
             <width>500</width>
             <label>$INFO[ListItem.Label]</label>
           </control>
-          <control type="label" description="Label2">
+          <control type="label">
+           <posx>160</posx>
+           <posy>58</posy>
+           <width>500</width>
+           <height>30</height>
+           <font>font12</font>
+           <textcolor>ListDetails</textcolor>
+           <selectedcolor>ListDetails</selectedcolor>
+           <align>left</align>
+           <aligny>center</aligny>
+           <label>$INFO[ListItem.Title]</label>
+           <visible>IsEmpty(Listitem.Icon)</visible>
+          </control>
+          <control type="label">
             <posx>160</posx>
             <posy>58</posy>
-            <height>30</height>
             <width>500</width>
+            <height>30</height>
+            <font>font12</font>
             <textcolor>ListDetails</textcolor>
+            <selectedcolor>ListDetails</selectedcolor>
+            <align>left</align>
+            <aligny>center</aligny>
             <label>$INFO[ListItem.Title]</label>
+            <visible>!IsEmpty(Listitem.Icon)</visible>
           </control>
           <control type="progress">
             <posx>160</posx>
