@@ -264,13 +264,13 @@
           <ondown>500</ondown>
           <onleft>9001</onleft>
           <itemgap>0</itemgap>
-          <control type="button" id="501" description="Sys info">
+          <control type="button" id="501" description="System information">
             <font>ListDetails</font>
             <width>322</width>
             <label>$LOCALIZE[138]</label>
             <onclick>activatewindow(systeminfo)</onclick>
           </control>
-          <control type="button" id="502" description="Wether">
+          <control type="button" id="502" description="Weather">
             <font>ListDetails</font>
             <width>322</width>
             <label>$LOCALIZE[8]</label>
@@ -518,7 +518,7 @@
             <aspectratio>keep</aspectratio>
             <texture>OverlayUnwatched.png</texture>
           </control>
-          <control type="image" description="UnWatched marks">
+          <control type="image" description="InProgress marks">
             <posx>1590</posx>
             <posy>270</posy>
             <width>26</width>
@@ -1693,6 +1693,18 @@
             <item id="2" description="Library stats">
               <visible>!Skin.HasSetting(Show_Library_Count)</visible>
               <label>$LOCALIZE[31978]</label>
+              <label2>$LOCALIZE[106]</label2>
+              <onclick>Skin.ToggleSetting(Show_Library_Count)</onclick>
+			</item>
+			<item id="3" description="Static Menu">
+              <visible>Skin.HasSetting(Show_Library_Count)</visible>
+              <label>$LOCALIZE[31363]</label>
+              <label2>$LOCALIZE[107]</label2>
+              <onclick>Skin.ToggleSetting(Show_Library_Count)</onclick>
+            </item>
+            <item id="3" description="Static Menu">
+              <visible>!Skin.HasSetting(Show_Library_Count)</visible>
+              <label>$LOCALIZE[31363]</label>
               <label2>$LOCALIZE[106]</label2>
               <onclick>Skin.ToggleSetting(Show_Library_Count)</onclick>
             </item>
