@@ -324,6 +324,13 @@
 					</control>
 				</itemlayout>
 				<focusedlayout height="78" width="60">
+				    <control type="image" id="14">
+					  <posx>0</posx>
+					  <posy>0</posy>
+					  <width>60</width>
+					  <height>78</height>
+					  <texture border="5">img/FrameSlim.png</texture>
+					</control>
 					<control type="image" id="2" description="Row">
 						<posx>0</posx>
 						<posy>0</posy>
