@@ -4,7 +4,7 @@
     <import addon="xbmc.gui" version="5.9.0"/>
     <import addon="script.favourites" version="6.0.2"/>
     <import addon="service.skin.widgets" version="0.0.29"/>
-	<import addon="resource.uisounds.amber" version="1.0.0"/>
+    <import addon="resource.uisounds.amber" version="1.0.0"/>
   </requires>
   <extension
     point="xbmc.gui.skin" debugging="false">
