@@ -1,6 +1,7 @@
 2.1.3
 Fix Amber GUI sounds, remove WMC PVR files, RecordPrefs.xml and DeleteTimer.xml are available on the forum for each PVR add-on that
-uses them, display weather icon on all Menu entries if weather is enabled, Font sizes added to support screensavers
+uses them, display weather icon on all Menu entries if weather is enabled, Font sizes added to support screensavers, 
+correct PVR selector for unknown genre, fix PVR channel dialogs
 
 2.1.2
 Fix bookmark menu and selector, update background images to 1080, remove redundant quit sub-menu items,
